--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^3.1.0",
     "express": "^4.16.4",
     "mysql": "^2.16.0"
   }
