--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -9,9 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "blueimp-md5": "^2.10.0",
     "body-parser": "^1.18.3",
     "config": "^3.1.0",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "express-session": "^1.16.1",
+    "generate-password": "^1.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.16.0",
+    "session": "^0.1.0"
   }
 }
