--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -13,6 +13,7 @@
     "blueimp-md5": "^2.10.0",
     "body-parser": "^1.18.3",
     "config": "^3.1.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
